[project]
name = "devopsdriver"
description = "DevOps tools"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
  "PyYAML==6.0.1",
  "keyring==25.0.0",
  "setuptools==69.0.2",  # neded for azure-devops to use 7.1 API
  "azure-devops==7.1.0b4",
  "Mako==1.3.2",
]
keywords = ["azure", "devops", "jira", "confluence", "email", "pipelines", "tools"]
classifiers=[
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "Topic :: Software Development",
]
authors = [
  {name = "Marc Page", email = "marcallenpage@gmail.com"},
]

[project.scripts]
settings = "devopsdriver.manage_settings:main"

[tool.setuptools.package-data]
"*" = ["*.mako"]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "pylint>=3.1.0",
]
test = [
    "pytest>=8.1.1",
    "coverage>=7.4.4",
]
doc = []

[project.urls]
Homepage = "https://github.com/marcpage/devops-driver"
Documentation = "https://github.com/marcpage/devops-driver"
Repository = "https://github.com/marcpage/devops-driver.git"
Issues = "https://github.com/marcpage/devops-driver/issues"
Changelog = "https://github.com/marcpage/devops-driver/releases"

[tool.setuptools.dynamic]
version = {attr = "devopsdriver.__version__"}

[build-system]
requires = ["setuptools >= 69.2"]
build-backend = "setuptools.build_meta"

